# DiffPruningTransformers

./: README.md  pyproject.toml
diffpruningtransformers/: __init__.py  diff_prune_transformer.py
tests/: test_diffpruningtransformers.py
