[tool.poetry]
name = "diffpruningtransformers"
version = "0.1.0"
description = "Implementation of Diff Pruning without manual gradient computation or HuggingFace internal modification"
authors = ["Helw150 <wbh230@nyu.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.9.1"
git = "github.com:SsnL/PyTorch-Reparam-Module.git"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
